fixed resizing on small browser

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -118,9 +118,6 @@ html{
 		width:30rem;
 }
 
-.project-names a {
-	border:1px solid LightGray;
-}
 
 
 .about-me-image {
@@ -217,6 +214,14 @@ a {
 	.font-two {
 		font-size:1rem;
 	}
+
+	.project-names div {
+		height:30rem;
+		width:18rem;
+}
+	.about-me-text, .ny-times-text, .karma-text {
+		width:18rem;
+	}
 }
 
 @media only screen and (max-width: 1650px) {
@@ -234,6 +239,19 @@ a {
 @media only screen and (max-width:980px) {
 	.container {
 		flex-direction:column;
+		justify-content:center;
 	}
+
+	.project-names {
+		width:90%;
+	}
+	.project-names div {
+		height:30rem;
+		width:19rem;
+}
+	.about-me-text, .ny-times-text, .karma-text {
+		width:19rem;
+	}
+	
 	
 }
